--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "eslint": "^8",
