--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@motionone/utils": "^10.18.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "framer-motion": "^11.5.4",
